- I18n (calls to L10nFacade, in String expand, pre-expand) in XML Screens

===========================================================================
Tools probable for 1.0 final:
===========================================================================

- Tools Screens
  - Entity
    - Entity Data Import and Export screens
    - SQL Query Run/View
    - Entity model internal check (relationship, view-link.key-map, ?)
    - Database meta-data check/report against entity definitions; NOTE:
      use LiquiBase for this
  - Scheduler (view scheduled services with cancel, add scheduled service)
  - Script Run (or groovy shell?)
  - Artifact Info screens (with in/out references for all)

===========================================================================
Features designed, but not to be included in 1.0 series
===========================================================================

- XML Screens
  - Screen tree elements
  - Screen section-iterate pagination
  - Screen form automatic client JS validation for service in-parameters
    for matches, number-range, text-length, text-letters, time-range,
    credit-card.@types
  - Dynamic Screens (database-driven: DynamicScreen* entities)
  - Dynamic Forms (database-driven: DynForm* entities) (see Drupal CCK for
    some similar concepts; focus on extend/override/etc of existing forms)
  - Templates for cwiki render mode
- Service Facade
  - Service database-driven semaphores
  - Service runners for proxy service calls to another Moqui server via
    HTTP, JMS, and RMI (TX enlisted), email, XMPP
- Entity Facade
  - LiquiBase integration, entity.change-set element
  - EntitySync tool
  - Database-driven dynamic view entity
  - Entity complex aliases in views
  - View entity view-link.econdition* support (EntityFindBuilder:196)
- Artifact Execution Facade
  - Artifact Tar-pitting based on configuration in db
  - Call ArtifactExecutionFacade.push() (to track, check authz, etc) for